.provarCaches/00D6C0000000xA6UAI/objects/Case_Comment_Template__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When check box is unchecked Comment Template will not appear as option to the user to select.</description>
        <inlineHelpText>When check box is unchecked Comment Template will not appear as option to the user to select.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Certificates</fullName>
                </value>
                <value>
                    <fullName>Class Posting Service</fullName>
                </value>
                <value>
                    <fullName>Course Records</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>Handover Procedures</fullName>
                </value>
                <value>
                    <fullName>Instructors</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Offerings</fullName>
                </value>
                <value>
                    <fullName>Organizations</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Programs</fullName>
                </value>
                <value>
                    <fullName>Purchase Orders</fullName>
                </value>
                <value>
                    <fullName>RBC</fullName>
                </value>
                <value>
                    <fullName>RCLC Requests</fullName>
                </value>
                <value>
                    <fullName>RCSPO</fullName>
                </value>
                <value>
                    <fullName>Red Cross Store</fullName>
                </value>
                <value>
                    <fullName>Refunds</fullName>
                </value>
                <value>
                    <fullName>TSC Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Comment Template</label>
    <listViews>
        <fullName>All_Case_Comment_Templates</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Active__c</columns>
        <columns>Comment_Body__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Comment Templates</label>
    </listViews>
    <listViews>
        <fullName>Class_Posting_Service</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Comment_Body__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Class Posting Service</value>
        </filters>
        <label>Class Posting Service</label>
    </listViews>
    <listViews>
        <fullName>RCLC_Requests</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Comment_Body__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>RCLC Requests</value>
        </filters>
        <label>RCLC Requests</label>
    </listViews>
    <listViews>
        <fullName>RCS_PO_Case_Comment_Template</fullName>
        <filterScope>Queue</filterScope>
        <label>RCS PO</label>
        <queue>RCS_PO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Refunds</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <columns>Comment_Body__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Refunds</value>
        </filters>
        <label>Refunds</label>
    </listViews>
    <nameField>
        <label>Case Comment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>